# opentelemetry-demo

./: .env  .gitignore  Makefile  docker-compose.minimal.yml  docker-compose.yml
src/clickhouse/: allow_timeseries_table.xml  prometheus.xml  timeseries.sql
src/frontendproxy/: envoy.tmpl.yaml
src/grafana/: grafana.ini
src/grafana/provisioning/datasources/: clickhouse.yaml
src/otelcollector/: otelcol-config.yml
src/prometheus/: prometheus-config.yaml
tprof-rs/: Cargo.toml  notes.txt
tprof-rs/src/: child_diff.rs  function_analysis.rs  main.rs  stats.rs  subspan.rs  trace.rs
