[package]
name = "tprof"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clickhouse = "0.11"
petgraph = "0.6" # TODO: rayon?
ego-tree = "0.6"
# itertools = "0.12"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
statrs = "0.16"
tokio = { version = "1.37", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
